[Add] サムネイル url 取得処理実装

--- a/src/popup-dialog.html
+++ b/src/popup-dialog.html
@@ -11,10 +11,12 @@
   <div>
     <div>thumbnail</div>
     <img
+      id="youtube-thumbnail-getter-thumbnail-img"
       src="https://cdn.pixabay.com/photo/2021/03/02/01/07/cyberpunk-6061251_960_720.jpg"
       alt="サムネイル"
       width="450px"
     >
   </div>
+  <script src="./index.js"></script>
 </body>
 </html>
