--- a/src/popup-dialog.html
+++ b/src/popup-dialog.html
@@ -4,18 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>youtube thumbnails getter</title>
 </head>
 <body>
-  <div>youtube thumbnails getter</div>
-  <div>
-    <div>thumbnail</div>
-    <img
-      id="youtube-thumbnail-getter-thumbnail-img"
-      src="https://cdn.pixabay.com/photo/2021/03/02/01/07/cyberpunk-6061251_960_720.jpg"
-      alt="サムネイル"
-      width="450px"
-    >
+  <div
+    class="popup-dialog-wrapper"
+  >
+    <div class="title-wrapper">
+      <div class="title">youtube thumbnails getter</div>
+    </div>
+    <div class="main-content-wrapper">
+      <div class="thumbnail-text-wrapper">
+        <div class="thumbnail-text">thumbnail</div>
+      </div>
+      <img
+        id="youtube-thumbnail-getter-thumbnail-img"
+        class="youtube-thumbnail-getter-thumbnail-img"
+        src="https://cdn.pixabay.com/photo/2021/03/02/01/07/cyberpunk-6061251_960_720.jpg"
+        alt="サムネイル"
+      >
+    </div>
   </div>
   <script src="./index.js"></script>
 </body>
