[Modify] manifest v3 に対応

--- a/src/popup-dialog.html
+++ b/src/popup-dialog.html
@@ -15,14 +15,11 @@
       <div class="title">youtube thumbnails getter</div>
     </div>
     <div class="main-content-wrapper">
-      <div class="thumbnail-text-wrapper">
-        <div class="thumbnail-text">thumbnail</div>
-      </div>
       <img
         id="youtube-thumbnail-getter-thumbnail-img"
         class="youtube-thumbnail-getter-thumbnail-img"
-        src="https://cdn.pixabay.com/photo/2021/03/02/01/07/cyberpunk-6061251_960_720.jpg"
-        alt="サムネイル"
+        src="https://img.youtube.com/vi//hqdefault.jpg"
+        alt="thumbnail"
       >
     </div>
   </div>
