feat: add download button

--- a/src/popup-dialog.html
+++ b/src/popup-dialog.html
@@ -22,6 +22,11 @@
         alt="thumbnail"
       >
     </div>
+    <div class="button-wrapper">
+      <button type="button" class="button download-button">
+        download
+      </button>
+    </div>
   </div>
   <script src="./index.js"></script>
 </body>
